# getmyancestors

./: .gitignore  LICENSE  README.md  fstogedcom.py  getmyancestors.py  mergemyancestors.py  pyproject.toml  requirements.txt  setup.cfg  translation.py
.github/: ISSUE_TEMPLATE.md
getmyancestors/: __init__.py  classes.py  fstogedcom.py  getmyancestors.py  mergemyancestors.py
getmyancestors/classes/: gedcom.py  gui.py  session.py  translation.py  tree.py
