[metadata]
name = getmyancestors
version = attr: getmyancestors.__version__
description = Retrieve GEDCOM data from FamilySearch Tree
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Linekio/getmyancestors
license = GNU
classifiers =
  Environment :: Console
  License :: OSI Approved :: GNU General Public License (GPL)
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only

[options]
packages=getmyancestors, getmyancestors.classes
install_requires =
  babelfish==0.6.0
  diskcache==5.2.1
  requests==2.25.1

[options.package_data]
* = fstogedcom.png

[options.entry_points]
console_scripts =
  getmyancestors=getmyancestors.getmyancestors:main
  mergemyancestors=getmyancestors.mergemyancestors:main
  fstogedcom=getmyancestors.fstogedcom:main

